@@ -3,6 +3,10 @@
 #  Copyright (C) 2005   Gregory P. Smith (greg@electricrain.com)
 #  Licensed to PSF under a Contributor Agreement.
 
+import warnings
+warnings.warn("the sha module is deprecated; use the hashlib module instead",
+                DeprecationWarning, 2)
+
 from hashlib import sha1 as sha
 new = sha
 
